tests/expectations/compiler/core/algorithms/integers/pedersen128/pedersen128_hash_to_u8.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `address` was found.
    --> compiler-test:27:45
     |
  27 |         let a: u8 = Pedersen128::hash_to_u8(addr_value);
     |                                             ^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `field` was found.
    --> compiler-test:29:45
     |
  29 |         let c: u8 = Pedersen128::hash_to_u8(field_value);
     |                                             ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `group` was found.
    --> compiler-test:30:45
     |
  30 |         let d: u8 = Pedersen128::hash_to_u8(group_value);
     |                                             ^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `scalar` was found.
    --> compiler-test:39:45
     |
  39 |         let o: u8 = Pedersen128::hash_to_u8(scalar_value);
     |                                             ^^^^^^^^^^^^
Error [ETYC0372117]: Expected an integer of less than 128 bits or a bool but type `Foo` was found.
    --> compiler-test:41:45
     |
  41 |         let q: u8 = Pedersen128::hash_to_u8(Foo { a: 1u32, b: 1u32, });
     |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^
"""]
